added scroll into view and current date

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,11 @@
   border-radius: 15px;
 }
 
+.day-current {
+  border: 2px solid black;
+  border-radius: 15px;
+}
+
 .dot {
   height: 25px;
   width: 25px;
